Fix: Correcciones z-index en contacto flotante y faq

--- a/src/styles/components/contact/floating.module.scss
+++ b/src/styles/components/contact/floating.module.scss
@@ -5,7 +5,7 @@
     display: flex;
     flex-wrap: wrap-reverse;
     flex-direction: row-reverse;
-    
+    z-index: 999;
     &>div {
         position: absolute;
         width: 10rem;
