--- a/src/styles/home/faq/faq.module.scss
+++ b/src/styles/home/faq/faq.module.scss
@@ -20,7 +20,7 @@
         // gap: 2rem;
         padding: 2rem;
         border-radius: 2rem;
-        z-index: 1;
+        z-index: 1000;
         background-color: #0A0A0A;
         &.show {
             .question svg {
